# iced_practice

./: Cargo.toml
src/: counter.rs  custom_text.rs  hello.rs  image.rs  main.rs  notes.rs  pages.rs  pick_list.rs  quiz.rs  radio.rs  slider.rs  space.rs  style.rs  text.rs  todo.rs  toggle_checkbox.rs  widget.rs  widget_text_color.rs
