[package]
name = "iced_practice"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5.0"
image = "0.23.14"
chrono = "0.4"
lazy_static = "1.4.0"

# iced = { git = "https://github.com/iced-rs/iced", features = ["image", "svg"] }
# iced_native = { git = "https://github.com/iced-rs/iced"}
# iced_graphics = { git = "https://github.com/iced-rs/iced"}


#[patch.crates-io]
iced = { path = "../iced" }
iced_native = { path = "../iced/native" }
iced_graphics = { path = "../iced/graphics" }

